# no-mans-ai

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/: copilot-instructions.md
mock/: Dockerfile  server.lua
src/: main.py
src/dispatchers/: lua_socket.py  mock.py
src/intents/: regex_parser.py
src/stt/: vosk_engine.py
src/utils/: config_loader.py
