[project]
name = "no-mans-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "sounddevice>=0.5.2",
    "vosk>=0.3.45",
]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250822",
]
